# hexamon-firmware

./: .gdbinit  .gitignore  Makefile  README.rst  default.conf  hexamon.cabal  ivory-tower-helloworld.cabal  stack.yaml
src/Hello/Tests/: Blink.hs  CAN2UART.hs  CANSendRecv.hs  LED.hs  Platforms.hs
src/Hexamon/: App.hs  DualHX711.hs  HX711.hs  Platforms.hs  Types.hs
src/Hexamon/Tests/: Blink.hs  CANSendRecv.hs  LED.hs
test/: BlinkTest.hs  CAN2UARTTest.hs  CANSendRecvTest.hs  Hexamon.hs
